--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   dropdown_button2: ^2.3.9
+  svg_flutter: ^0.0.1
+  flutter_svg: ^2.0.10+1
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
