--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   svg_flutter: ^0.0.1
   flutter_svg: ^2.0.10+1
   connectivity_plus: ^6.0.5
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
